--- a/src/pages/appeals/livelihood.astro
+++ b/src/pages/appeals/livelihood.astro
@@ -92,7 +92,7 @@ const keywords = "Muslim Charity,Zakat Calculator,Sadaqah Jariyah,Zakat,Sadaqah"
     </section>
     <!-- End-of Breadcrumb Area -->
     <DonationCard
-      programId={[24, 25, 26, 27, 30]}
+      programId={[69,70,71,72,73]}
       title="CRF Livelihood Appeal"
       description="Livelihood Donation"
     />
