--- a/src/pages/appeals/sadaqah.astro
+++ b/src/pages/appeals/sadaqah.astro
@@ -93,7 +93,7 @@ const pageImage="";
       </div>
     </section>
     <!-- End-of Breadcrumb Area -->
-    <DonationCard programId={[31, 34, 35, 22, 23, 32, 33]} />
+    <DonationCard programId={[74,75,76]} />
 
     <section class="section-padding">
       <div class="container mt-5">
