--- a/src/pages/appeals/water.astro
+++ b/src/pages/appeals/water.astro
@@ -5,9 +5,11 @@ import { SEO } from "astro-seo";
 const title = "Water Well Charity | Give the Gift of Water Today | CRF";
 const description =
   "Care and Relief Foundation is a UK-registered water well charity dedicated to providing clean drinking water to those in need. Donate now to build a Water well.";
-const pageImage ="";
-const keywords = "Water Well Charity,Donate Water Well,Water Pump Charity,Build A Water Well,Water Aid";
+const pageImage = "";
+const keywords =
+  "Water Well Charity,Donate Water Well,Water Pump Charity,Build A Water Well,Water Aid";
 ---
+
 <SEO
   title={title}
   description={description}
@@ -16,7 +18,7 @@ const keywords = "Water Well Charity,Donate Water Well,Water Pump Charity,Build 
     basic: {
       title: `${title}`,
       type: "website",
-      image: `${pageImage? pageImage : "/assets/images/logo/Logo-CRF.png"}`,
+      image: `${pageImage ? pageImage : "/assets/images/logo/Logo-CRF.png"}`,
     },
     optional: {
       description: `${description}`,
@@ -81,7 +83,8 @@ const keywords = "Water Well Charity,Donate Water Well,Water Pump Charity,Build 
               </li>
               <li class="breadcrumb-item single-list" aria-current="page">
                 <a href="/appeals" class="single">Appeals </a>
-              </li>   <li class="breadcrumb-item single-list" aria-current="page">
+              </li>
+              <li class="breadcrumb-item single-list" aria-current="page">
                 <a href="/appeals/water" class="single">Water Appeal </a>
               </li>
             </ul>
@@ -92,7 +95,7 @@ const keywords = "Water Well Charity,Donate Water Well,Water Pump Charity,Build 
     </section>
     <!-- End-of Breadcrumb Area -->
     <DonationCard
-      programId={[17, 18, 19, 20, 18]}
+      programId={[57, 58, 59, 60, 58]}
       title="CRF Water Project"
       description="Water Appeal Donation"
     />
